fix(view content): fix scrolling on iOS
closes #17

--- a/src/app/pages/details/_page-details.scss
+++ b/src/app/pages/details/_page-details.scss
@@ -86,3 +86,13 @@
   }
 
 }
+
+body.platform-ios {
+
+  .page-ctx ion-content {
+    // fixes scrolling over iframe issue on iOS only
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
